# game-node-sync-igdb

./: .env.example  .gitignore  Dockerfile  README.md  crontab  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
config/: __init__.py  logging.py  redis.py
igdb/: .env.example  Dockerfile  README.md  crontab  main.py  package.json  pyproject.toml  requirements.txt
igdb-node/: .nvmrc  Dockerfile  package.json
igdb-node/src/: app.logger.middlewhare.ts
igdb-node/src/auth/: auth.module.ts  auth.service.ts  config.interface.ts  session.decorator.ts  user.decorator.ts
igdb-node/src/auth/jwt-auth/: jwt-auth.guard.ts  jwt-auth.module.ts  jwt-auth.service.ts
igdb-node/src/sync/: igdb-sync-auth.service.ts  igdb-sync.module.ts  igdb-sync.service.ts
igdb/auth/: __init__.py  igdb.py  jwt.py
igdb/config/: __init__.py  rabbitmq.py  redis.py  supertokens.py
igdb/interface/: igdb_token_response.py
igdb/src/: app.module.ts  main.ts
igdb/src/auth/: auth.filter.ts  auth.guard.ts  auth.middleware.ts
igdb/src/auth/jwt-auth/: jwt-auth.guard.ts  jwt-auth.service.ts
igdb/src/global/: global.module.ts
igdb/src/sync/: igdb-sync.service.ts  igdb-sync.types.ts
igdb/sync/: __init__.py  service.py
stores/: go.mod  main.go
sync/: service.py
